# Pattern-Recognition-and-Computer-Vision

./: .gitignore
Project 1 Video-special effects/: readme.txt
Project 1 Video-special effects/da2-code/: CMakeLists.txt  da2-example.cpp  makefile
Project 1 Video-special effects/image/: CMakeLists.txt
Project 1 Video-special effects/image/src/: imgDisplay.cpp
Project 1 Video-special effects/video/: CMakeLists.txt
Project 1 Video-special effects/video/src/: DA2Network.hpp  da2  da2-example.cpp  da2-video.cpp  faceDetect.cpp  faceDetect.h  filter.cpp  filter.h  makefile  vidDisplay.cpp
proj3/: CMakeLists.txt  README  object_recognition.cpp  object_recognition_custom_knn.cpp  object_recognition_ext.cpp  object_recognition_knn.cpp
project2/: CMakeLists.txt  q5  q6  q7  readme.txt
project2/src/: csv_util.cpp  csv_util.h  feature_extractor.cpp  feature_utils.cpp  feature_utils.h  image_matcher.cpp  lbp_extractor.cpp  matching_pipeline.cpp  orb_extractor.cpp  q5.cpp  q6.cpp  q7.cpp  ssim_extractor.cpp
project3/: CMakeLists.txt
project3/src/: ImageProcessor.cpp  ImageProcessor.h  KMeans.cpp  KMeans.h  RegionAnalyzer.cpp  RegionAnalyzer.h  RegionFeatures.cpp  RegionFeatures.h  Thresholder.cpp  Thresholder.h  classifier.cpp  classifier_vid.cpp  filter.cpp  filter.h  main.cpp  morphology.cpp  morphology.h
project4/: CMakeLists.txt  README
project4/src/: feature_detector.cpp  main.cpp  pose_estimator.cpp  target_detector.cpp  target_detector.h
project5/: greek_classifier.py  greek_model.pth  mnist_model.pth  network_analysis.py  neural_net.py  requirements.txt  test_greek.py  test_model.py
